# simple-sat

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  main.rs  solver.rs
src/solver/: cnf_ops.rs  data_model.rs  engines.rs
src/solver/engines/: branching.rs  brute_force.rs  cdcl.rs
src/solver/engines/branching/: trivial.rs  vsids.rs
