[package]
name = "simple-sat"
description = "One of the SAT solvers of all time"
authors = ["Konstantin Sidorov"]
license = "Unlicense"
version = "1.0.1"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.19", features = ["derive"] }
const_format = "0.2.30"
dimacs = "0.2.0"
env_logger = "0.9.1"
log = "0.4.17"

[build-dependencies]
anyhow = "1.0.65"
vergen = "7.4.2"

[profile.release]
lto = true